option for gap between tab header and content (sidebars)

--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -115,6 +115,9 @@ body {
     --image-shadow-stripe-gap: 4px;
     --image-shadow-color: var(--background-primary-alt);
 
+    /* sidedocks */
+    --sidedock-tab-header-padding-bottom: 0px;
+
     /* table */
     --table-header-line-height: 1.8;
 
