Separate cards deck callout/dataview

--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -2,6 +2,7 @@
 @use 'blockquotes/blockquote';
 @use 'callouts/callouts';
 @use 'code';
+@use 'dataview/dataview';
 @use 'embed-faded';
 @use 'embeds';
 @use 'headings';
