--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -1,6 +1,7 @@
 @use 'callout-style';
 
 @use 'callout-autopsy';
+@use 'callout-cards-deck';
 @use 'callout-clue';
 @use 'callout-comic';
 @use 'callout-cutout';
@@ -13,7 +14,5 @@
 @use 'callout-profile';
 @use 'callout-screen';
 @use 'callout-timeline';
-
-@use 'callout-dvjs-cards-deck';
 
 @use 'callouts-metadata';
