Fix border in cards deck

--- a/scss/editor/callouts/_callout-cards-deck.scss
+++ b/scss/editor/callouts/_callout-cards-deck.scss
@@ -4,7 +4,7 @@
     --callout-icon: lucide-layers;
     --deck-border-width: 1px;
     --callout-border-width: var(--deck-border-width);
-    --border-color: rgb(var(--callout-color));
+    --border-color-hover: rgb(var(--callout-color));
     --p-spacing: 0;
 }
 
