Variable --font-monospace-screen

--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -93,6 +93,9 @@ body {
 
     /* ----------------- CUSTOM ----------------- */
 
+    /* callouts */
+    --font-monospace-screen: 'ProFont', 'Courier New', Courier, monospace;
+
     /* circle cutouts */
     --cutout-corner-radius: 13px;
     --cutout-corner-angle: 0.25em;
