--- a/scss/cssclasses/_newspaper.scss
+++ b/scss/cssclasses/_newspaper.scss
@@ -33,6 +33,9 @@
     transform: none;
     background: none;
 }
+.newspaper .metadata-properties-heading .collapse-indicator {
+    inset-inline-start: -22px;
+}
 
 .newspaper .inline-title {
     text-align: center;
