--- a/scss/editor/_image.scss
+++ b/scss/editor/_image.scss
@@ -1,5 +1,27 @@
 @use '../foundations/colors/colors_definitions';
 
+.image-embed {
+    font-size: 0;
+}
+    
+.markdown-rendered .image-embed[alt~="float-right"] {
+    float: right;
+    margin: var(--size-4-3) 0 var(--size-4-3) var(--size-4-3);
+}
+
+.markdown-rendered .image-embed[alt~="float-left"] {
+    float: left;
+    margin: var(--size-4-3) var(--size-4-3) var(--size-4-3) 0;
+}
+    
+@each $key, $c in map-get(colors_definitions.$extended-colors, "light") {
+    .image-embed[alt~="#{$key}"] { --image-shadow-color: rgba(var(--color-#{$key}-rgb), 0.2); }
+}
+
+.markdown-rendered .image-embed[alt~="no-shadow"] {
+    --image-shadow-offset: 0;
+}
+
 @container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
     .image-embed {
         z-index: 1;
@@ -33,23 +55,5 @@
                 transparent calc(var(--image-shadow-stripe-thickness) + var(--image-shadow-stripe-gap))
             );
         }
-    }
-    
-    .markdown-rendered .image-embed[alt~="float-right"] {
-        float: right;
-        margin: var(--size-4-3) 0 var(--size-4-3) var(--size-4-3);
-    }
-    
-    .markdown-rendered .image-embed[alt~="float-left"] {
-        float: left;
-        margin: var(--size-4-3) var(--size-4-3) var(--size-4-3) 0;
-    }
-    
-    @each $key, $c in map-get(colors_definitions.$extended-colors, "light") {
-        .image-embed[alt~="#{$key}"] { --image-shadow-color: rgba(var(--color-#{$key}-rgb), 0.2); }
-    }
-    
-    .markdown-rendered .image-embed[alt~="no-shadow"] {
-        --image-shadow-offset: 0;
     }
 }
