--- a/scss/window/_kpr-bg-textures.scss
+++ b/scss/window/_kpr-bg-textures.scss
@@ -15,6 +15,10 @@
     z-index: -1;
 }
 
+.is-mobile.kpr-bg-textures .workspace-leaf-content[data-type="file-explorer"]::before {
+    bottom: calc(max(var(--size-4-2), var(--safe-area-inset-bottom)) + var(--icon-size) + var(--size-2-2) + var(--size-2-3));
+}
+
 
 /* ----------- Paper texture ----------- */
 .kpr-bg-textures.theme-dark .mod-sidedock .workspace-leaf {
