--- a/scss/window/_window.scss
+++ b/scss/window/_window.scss
@@ -5,6 +5,7 @@
 @use 'ribbon';
 @use 'scrollbar';
 @use 'sidebar';
+@use 'status-bar';
 @use 'tab-headers';
 @use 'titlebar';
 @use 'vault-profile';
