Status bar: default hover

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -197,6 +197,9 @@ settings:
         default: none
         options:
             - 
+                label: Default on hover
+                value: fas-status-bar-default-hover
+            - 
                 label: Top
                 value: fas-status-bar-top
 
