Status bar: ribbon

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -202,6 +202,9 @@ settings:
             - 
                 label: Top
                 value: fas-status-bar-top
+            - 
+                label: Ribbon
+                value: fas-status-bar-ribbon
 
 
 
