Status bar: add scope

--- a/scss/window/_status-bar.scss
+++ b/scss/window/_status-bar.scss
@@ -1,106 +1,109 @@
-.fas-status-bar-top {
-
-    .app-container {
-        flex-direction: column-reverse;
-    }
-
-    .horizontal-main-container {
-        position: relative;
-    }
+@scope (body:has(.status-bar)) {
     
-    .status-bar {
-        -webkit-app-region: drag;
-        position: static;
-        background: none;
+    :scope.fas-status-bar-top {
+
+        .app-container {
+            flex-direction: column-reverse;
+        }
+
+        .horizontal-main-container {
+            position: relative;
+        }
+        
+        .status-bar {
+            -webkit-app-region: drag;
+            position: static;
+            background: none;
+        }
+        
+        &.is-hidden-frameless:not(.is-fullscreen):not(.mod-macos) .status-bar::after {
+            -webkit-app-region: drag;
+            content: '';
+            height: 100%;
+            width: calc(var(--frame-right-space) + var(--size-4-2) + 6px + var(--header-height) - 1px);
+        }
+        
+        &.is-hidden-frameless:not(.is-fullscreen) .mod-root .workspace-tab-header-container,
+        &:not(.is-frameless) .mod-root .workspace-tab-header-container {
+            border-top: 0 !important;
+            box-sizing: border-box;
+        }
+        
+        &.is-hidden-frameless:not(.is-fullscreen) .titlebar-button-container.mod-right::before {
+            left: calc(-1 * var(--header-height) + 1px) !important;
+            width: calc(var(--header-height) - 1px) !important;
+            height: calc(var(--header-height) - 1px) !important;
+        }
     }
-    
-    &.is-hidden-frameless:not(.is-fullscreen):not(.mod-macos) .status-bar::after {
-        -webkit-app-region: drag;
-        content: '';
-        height: 100%;
-        width: calc(var(--frame-right-space) + var(--size-4-2) + 6px + var(--header-height) - 1px);
-    }
-    
-    &.is-hidden-frameless:not(.is-fullscreen) .mod-root .workspace-tab-header-container,
-    &:not(.is-frameless) .mod-root .workspace-tab-header-container {
-        border-top: 0 !important;
-        box-sizing: border-box;
-    }
-    
-    &.is-hidden-frameless:not(.is-fullscreen) .titlebar-button-container.mod-right::before {
-        left: calc(-1 * var(--header-height) + 1px) !important;
-        width: calc(var(--header-height) - 1px) !important;
-        height: calc(var(--header-height) - 1px) !important;
-    }
-}
 
 
 
-.fas-status-bar-default-hover {
-    .status-bar {
-        --transition-duration: 0.5s;
-        --transition-timing-function: ease;
-        --border-width: max(15px, var(--radius-m));
-        transform: translateX(calc(100% - var(--border-width)));
-        transition-duration: var(--transition-duration), max(0s, calc(var(--transition-duration) - 0.2s));
-        transition-timing-function: var(--transition-timing-function);
-        transition-property: transform, border;
-        border-left: var(--color-accent) solid var(--border-width);
-    }
-    .status-bar::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        transition-duration: var(--transition-duration);
-        transition-timing-function: var(--transition-timing-function);
-        transition-property: left;
-        z-index: -1;
-    }
-    
-    .status-bar:hover {
-        transform: none;
-        border-left-width: 0;
-    }
-    
-    .status-bar:hover::before {
-        left: 0;
-    }
-}
-
-
-
-.fas-status-bar-ribbon {
-    --status-bar-radius: 0;
-    --status-bar-text-color: var(--workspace-foreground-muted);
-    .status-bar {
-        right: unset;
-        left: 0;
-        flex-direction: row;
-        height: 50vh;
-        width: var(--ribbon-width);
-
-        writing-mode: vertical-rl;
-        text-orientation: mixed;
-        background: none;
-        opacity: var(--icon-opacity-inactive);
+    :scope.fas-status-bar-default-hover {
+        .status-bar {
+            --transition-duration: 0.5s;
+            --transition-timing-function: ease;
+            --border-width: max(15px, var(--radius-m));
+            transform: translateX(calc(100% - var(--border-width)));
+            transition-duration: var(--transition-duration), max(0s, calc(var(--transition-duration) - 0.2s));
+            transition-timing-function: var(--transition-timing-function);
+            transition-property: transform, border;
+            border-left: var(--color-accent) solid var(--border-width);
+        }
+        .status-bar::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            transition-duration: var(--transition-duration);
+            transition-timing-function: var(--transition-timing-function);
+            transition-property: left;
+            z-index: -1;
+        }
+        
+        .status-bar:hover {
+            transform: none;
+            border-left-width: 0;
+        }
+        
+        .status-bar:hover::before {
+            left: 0;
+        }
     }
 
-    .status-bar-item.mod-clickable:not(:has(svg)) {
-        transform: rotate(180deg);
-    }
 
-    .status-bar:hover {
-        border-top: 1px dashed var(--color-base-40);
-        opacity: 1;
-    }
 
-    .workspace-ribbon {
-        height: calc(50vh - var(--header-height) + 1px);
-    }
-    .workspace-ribbon:hover {
-        border-bottom: 1px dashed var(--color-base-40);
+    :scope.fas-status-bar-ribbon {
+        --status-bar-radius: 0;
+        --status-bar-text-color: var(--workspace-foreground-muted);
+        .status-bar {
+            right: unset;
+            left: 0;
+            flex-direction: row;
+            height: 50vh;
+            width: var(--ribbon-width);
+
+            writing-mode: vertical-rl;
+            text-orientation: mixed;
+            background: none;
+            opacity: var(--icon-opacity-inactive);
+        }
+
+        .status-bar-item.mod-clickable:not(:has(svg)) {
+            transform: rotate(180deg);
+        }
+
+        .status-bar:hover {
+            border-top: 1px dashed var(--color-base-40);
+            opacity: 1;
+        }
+
+        .workspace-ribbon {
+            height: calc(50vh - var(--header-height) + 1px);
+        }
+        .workspace-ribbon:hover {
+            border-bottom: 1px dashed var(--color-base-40);
+        }
     }
 }
