--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -132,3 +132,13 @@ body {
     --workleaves-background: var(--background-primary);
     --workleaves-foreground: var(--text-normal);
 }
+
+.theme-light {
+    /* shadows */
+    --shadow-color: rgba(0, 0, 0, 0.2);
+}
+
+.theme-dark {
+    /* shadows */
+    --shadow-color: rgba(0, 0, 0, 0.3);
+}
