--- a/scss/window/_sidebar.scss
+++ b/scss/window/_sidebar.scss
@@ -6,7 +6,7 @@
 /* Sidedocks workleaves */
 .mod-sidedock .workspace-leaf {
     background-color: var(--workleaves-background);
-    box-shadow: inset 0 0 20px 3px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 20px 3px var(--shadow-color);
     mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black)
         calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius));
 }
