--- a/scss/window/_status-bar.scss
+++ b/scss/window/_status-bar.scss
@@ -11,7 +11,7 @@
         }
         
         .status-bar {
-            position: relative;
+            position: initial;
             background: none;
         }
         
