--- a/scss/cssclasses/_cssclasses.scss
+++ b/scss/cssclasses/_cssclasses.scss
@@ -1,5 +1,7 @@
+@use 'banner';
 @use 'black-and-white';
 @use 'columns';
 @use 'confidential';
 @use 'newspaper';
+@use 'no-title';
 @use 'wide-page';
