--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -58,6 +58,10 @@ body {
     /* modal */
     --modal-radius: var(--radius-s);
 
+    /* poem */
+    --poem-border-width: 1px;
+    --poem-color: var(--color-blue-rgb);
+
     /* radiuses */
     --radius-s: 0;
 
