--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -11,6 +11,7 @@
 @use 'callout-letter';
 @use 'callout-paper-fold';
 @use 'callout-pinned';
+@use 'callout-poem';
 @use 'callout-profile';
 @use 'callout-screen';
 @use 'callout-timeline';
